--- a/NickClineResume.tex
+++ b/NickClineResume.tex
@@ -1,86 +1,48 @@
+\documentclass[11pt]{article}
+
 % Options for packages loaded elsewhere
 \PassOptionsToPackage{unicode}{hyperref}
 \PassOptionsToPackage{hyphens}{url}
 %
-\documentclass[
-]{article}
-\usepackage{lmodern}
-\usepackage{amssymb,amsmath}
-\usepackage{ifxetex,ifluatex}
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
-  \usepackage[T1]{fontenc}
-  \usepackage[utf8]{inputenc}
-  \usepackage{textcomp} % provide euro and other symbols
-\else % if luatex or xetex
-  \usepackage{unicode-math}
-  \defaultfontfeatures{Scale=MatchLowercase}
-  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
-\fi
-% Use upquote if available, for straight quotes in verbatim environments
-\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
-\IfFileExists{microtype.sty}{% use microtype if available
-  \usepackage[]{microtype}
-  \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
-}{}
-\makeatletter
-\@ifundefined{KOMAClassName}{% if non-KOMA class
-  \IfFileExists{parskip.sty}{%
-    \usepackage{parskip}
-  }{% else
-    \setlength{\parindent}{0pt}
-    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
-}{% if KOMA class
-  \KOMAoptions{parskip=half}}
-\makeatother
-\usepackage{xcolor}
-\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
-\hypersetup{
-  hidelinks,
-  pdfcreator={LaTeX via pandoc}}
-\urlstyle{same} % disable monospaced font for URLs
-\usepackage{longtable,booktabs}
-% Correct order of tables after \paragraph or \subparagraph
-\usepackage{etoolbox}
-\makeatletter
-\patchcmd\longtable{\par}{\if@noskipsec\mbox{}\fi\par}{}{}
-\makeatother
-% Allow footnotes in longtable head/foot
-\IfFileExists{footnotehyper.sty}{\usepackage{footnotehyper}}{\usepackage{footnote}}
-\makesavenoteenv{longtable}
-\setlength{\emergencystretch}{3em} % prevent overfull lines
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
+
+% Set page margins to 0.23 inches
+\usepackage[margin=0.23in]{geometry}
 
 \author{}
 \date{}
 
 \begin{document}
 
-\textbf{Nick Cline}
+% Center, bold, and enlarge name
+{\centering
+\huge\textbf{Nick Cline}
+\par}
 
+\vspace{0.5em}  % Add some vertical space
+
+% Center and reduce spacing for contact info
+{\centering
+\small
 Somerville, MA \textbar{} +1 978-880-3507 \textbar{}
 nicholascline1@gmail.com \textbar{} nickcline.com
+\par}
+
+\vspace{1em}  % Add more vertical space before next section
 
 \textbf{Education}
 
-\begin{quote}
 \textbf{University of Massachusetts Amherst Amherst, MA}
 
 \emph{B.S., M.S. in Mechanical Engineering \textbar{} GPA 3.49/4.0 May
 2022}
 
 \emph{Minor in Computer Science}
-\end{quote}
 
 \textbf{Work Experience}
 
-\begin{quote}
 \textbf{Draper Laboratory} \textbf{Cambridge, MA}
 
 \emph{Mechanical Instrumentation Engineer II Aug 2022 -- Present}
-\end{quote}
 
 \begin{itemize}
 \item
@@ -94,11 +56,9 @@ nicholascline1@gmail.com \textbar{} nickcline.com
   critical assembly features.
 \end{itemize}
 
-\begin{quote}
 \textbf{Charge Analytics LLC} \textbf{Ipswich, MA}
 
 \emph{Design Engineer Jun 2021 - Aug 2021}
-\end{quote}
 
 \begin{itemize}
 \item
@@ -112,11 +72,9 @@ nicholascline1@gmail.com \textbar{} nickcline.com
 
 \textbf{Research Experience}
 
-\begin{quote}
 \textbf{University of Massachusetts Amherst HRSL} \textbf{Amherst, MA}
 
 \emph{Graduate Researcher Dec 2021 - May 2022}
-\end{quote}
 
 \begin{itemize}
 \item
@@ -133,7 +91,7 @@ nicholascline1@gmail.com \textbar{} nickcline.com
   latency, enabling better feedback for control and evaluation.
 \end{itemize}
 
-\textbf{PROject experience}
+\textbf{Project experience}
 
 \textbf{Robotic Simulation}
 
@@ -154,13 +112,7 @@ pp. 12275-12281, doi: 10.1109/IROS47612.2022.9981067.
 
 \textbf{Skills \& Interests}
 
-\begin{longtable}[]{@{}ll@{}}
-\toprule
-\endhead
-\textbf{Skills} & Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB,
-Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics,
-OpenCV.\tabularnewline
-\bottomrule
-\end{longtable}
+\textbf{Skills:} Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB,
+Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV.
 
 \end{document}
