put bullets back grr

--- a/NickClineResume.tex
+++ b/NickClineResume.tex
@@ -16,6 +16,15 @@
   \vspace{0.5em}%
 }
 
+% Define a command for entries with right-justified dates
+\newcommand{\entry}[2]{%
+  \noindent\makebox[\textwidth]{%
+    \parbox{\textwidth}{%
+      \textbf{#1}\hfill\textit{#2}%
+    }%
+  }%
+}
+
 \author{}
 \date{}
 
@@ -37,88 +46,51 @@ nicholascline1@gmail.com \textbar{} nickcline.com
 
 \sectionheading{Education}
 
-\textbf{University of Massachusetts Amherst Amherst, MA}
+\entry{University of Massachusetts Amherst Amherst, MA}{May 2022}
 
-\emph{B.S., M.S. in Mechanical Engineering \textbar{} GPA 3.49/4.0 May
-2022}
+B.S., M.S. in Mechanical Engineering \textbar{} GPA 3.49/4.0
 
-\emph{Minor in Computer Science}
+Minor in Computer Science
 
 \sectionheading{Work Experience}
 
-\textbf{Draper Laboratory} \textbf{Cambridge, MA}
-
-\emph{Mechanical Instrumentation Engineer II Aug 2022 -- Present}
-
+\entry{Draper Laboratory, Cambridge, MA}{Aug 2022 -- Present}
+\textit{Mechanical Instrumentation Engineer II}
 \begin{itemize}
-\item
-  Developed innovative design features for a sensor assembly by
-  exploring trade spaces and proposing new solutions, coordinating with
-  a cross-functional team to plan reviews, track performance and meet
-  strict requirements.
-\item
-  Designed and tested production prototypes, analyzing test data to
-  identify areas for revision and validate production processes for
-  critical assembly features.
+\item Developed innovative design features for a sensor assembly by exploring trade spaces and proposing new solutions, coordinating with a cross-functional team to plan reviews, track performance and meet strict requirements.
+\item Designed and tested production prototypes, analyzing test data to identify areas for revision and validate production processes for critical assembly features.
 \end{itemize}
 
-\textbf{Charge Analytics LLC} \textbf{Ipswich, MA}
-
-\emph{Design Engineer Jun 2021 - Aug 2021}
-
+\entry{Charge Analytics LLC, Ipswich, MA}{Jun 2021 -- Aug 2021}
+\textit{Design Engineer}
 \begin{itemize}
-\item
-  Executed end-to-end product development processes, from initial
-  concept ideation and mechanical design to electronics packaging and
-  prototype fabrication using 3D printing techniques.
-\item
-  Generated CNC Fabrication process for retrofitting low-volume IoT
-  parts to reduce costs by nearly 90\% relative to quotes.
+\item Executed end-to-end product development processes, from initial concept ideation and mechanical design to electronics packaging and prototype fabrication using 3D printing techniques.
+\item Generated CNC Fabrication process for retrofitting low-volume IoT parts to reduce costs by nearly 90\% relative to quotes.
 \end{itemize}
 
 \sectionheading{Research Experience}
 
-\textbf{University of Massachusetts Amherst HRSL} \textbf{Amherst, MA}
-
-\emph{Graduate Researcher Dec 2021 - May 2022}
-
+\entry{University of Massachusetts Amherst HRSL, Amherst, MA}{Dec 2021 -- May 2022}
+\textit{Graduate Researcher}
 \begin{itemize}
-\item
-  Created control scripts in Python to implement custom impedance
-  control loops on the HRSL Hip Exoskeleton using a Raspberry Pi 4 and
-  the FlexSEA API.
-\item
-  Analyzed the effect of unilateral stiffness on human gait by comparing
-  kinematic metrics over stiffness ON and OFF phases, with results
-  published in IROS 2022.
-\item
-  Identified key areas for quality-of-life improvements and wrote
-  software solutions to deliver key test metrics in real-time with low
-  latency, enabling better feedback for control and evaluation.
+\item Created control scripts in Python to interface with a robotic exoskeleton and collect data from motion capture and force plates.
+\item Analyzed the effect of unilateral stiffness on human gait using MATLAB, identifying key trends in joint angles and ground reaction forces.
+\item Identified key areas for quality-of-life improvements in the lab's data collection pipeline, implementing solutions to streamline the process.
 \end{itemize}
 
 \sectionheading{Project Experience}
 
 \textbf{Robotic Simulation}
-
 \begin{itemize}
-\item
-  Built a Furuta pendulum model for use in Gazebo, controlled with C++
-  scripts and ROS 2. Developed swing-up and energy-minimizing
-  controllers to stabilize pendulum. Future implementations include RL
-  control of the pendulum and double pendulum control.
+\item Built a Furuta pendulum model for use in Gazebo, controlled with C++ scripts and ROS 2. Developed swing-up and energy-minimizing controllers to stabilize pendulum. Future implementations include RL control of the pendulum and double pendulum control.
 \end{itemize}
 
 \sectionheading{Publications}
 
-M. Price et al., "Unilateral stiffness modulation with a robotic hip
-exoskeleton elicits adaptation during gait," 2022 IEEE/RSJ International
-Conference on Intelligent Robots and Systems (IROS), Kyoto, Japan, 2022,
-pp. 12275-12281, doi: 10.1109/IROS47612.2022.9981067.
+M. Price et al., "Unilateral stiffness modulation with a robotic hip exoskeleton elicits adaptation during gait," 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Kyoto, Japan, 2022, pp. 12275-12281, doi: 10.1109/IROS47612.2022.9981067.
 
 \sectionheading{Skills \& Interests}
 
-\textbf{Skills:} Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB,
-Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV.
+\textbf{Skills:} Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV.
 
 \end{document}
