--- a/NickClineResume.tex
+++ b/NickClineResume.tex
@@ -48,9 +48,9 @@ nicholascline1@gmail.com \textbar{} nickcline.com
 
 \entry{University of Massachusetts Amherst Amherst, MA}{May 2022}
 
-B.S., M.S. in Mechanical Engineering \textbar{} GPA 3.49/4.0
+\textit{B.S., M.S. in Mechanical Engineering \textbar{} GPA 3.49/4.0}
 
-Minor in Computer Science
+\textit{Minor in Computer Science}
 
 \sectionheading{Work Experience}
 
