adding research resume

--- a/NickClineResearchResume.tex
+++ b/NickClineResearchResume.tex
@@ -52,6 +52,17 @@ nicholascline1@gmail.com \textbar{} nickcline.com
 
 \textit{Minor in Computer Science}
 
+\sectionheading{Research Experience}
+
+\entry{University of Massachusetts Amherst HRSL, Amherst, MA}{Dec 2021 -- May 2022}
+\textit{Graduate Researcher}
+\begin{itemize}
+\item Created control scripts in python to implement custom impedance control loops for a robotic hip exoskeleton using a Raspberri Pi 4 and the FlexSEA API.
+\item Applied asymmetric perturbations to human gait to study behavioral adaptations to a resistant exoskeleton stiffness. Compiled and analyzed data from motion capture and ground reaction forces to identify key trends and possible neuromotor impacts.
+\item Used findings to evaluate the gait patterns resulting from the exoskeleton's impedance with results published in IROS 2022.
+\item Identified new control schemes for gait control, documenting and testing the initial implementation. Takeaways from the experiments were used to develop tools for realtime data analysis and an improved setup process.
+\end{itemize}
+
 \sectionheading{Work Experience}
 
 \entry{Draper Laboratory, Cambridge, MA}{Aug 2022 -- Present}
@@ -67,29 +78,21 @@ nicholascline1@gmail.com \textbar{} nickcline.com
 \item Executed end-to-end product development processes, designing electronics packaging and rapid prototyping for low volume production. Generated CNC fabrication processes to reduce procurement and manufacturing costs by 90%.
 \end{itemize}
 
-\sectionheading{Research Experience}
-
-\entry{University of Massachusetts Amherst HRSL, Amherst, MA}{Dec 2021 -- May 2022}
-\textit{Graduate Researcher}
-\begin{itemize}
-\item Created control scripts in Python to interface with a robotic exoskeleton and collect data from motion capture and force plates.
-\item Analyzed the effect of unilateral stiffness on human gait using MATLAB, identifying key trends in joint angles and ground reaction forces.
-\item Identified key areas for quality-of-life improvements in the lab's data collection pipeline, implementing solutions to streamline the process.
-\end{itemize}
-
 \sectionheading{Project Experience}
 
 \textbf{Robotic Simulation}
 \begin{itemize}
 \item Built a Furuta pendulum model for use in Gazebo, controlled with C++ scripts and ROS 2. Developed swing-up and energy-minimizing controllers to stabilize pendulum. Future implementations include RL control of the pendulum and double pendulum control.
+\item 
 \end{itemize}
 
 \sectionheading{Publications}
 
-M. Price et al., "Unilateral stiffness modulation with a robotic hip exoskeleton elicits adaptation during gait," 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Kyoto, Japan, 2022, pp. 12275-12281, doi: 10.1109/IROS47612.2022.9981067.
+Price, M., Abdikadirova, B., Locurto, D., Jaramillo, J. M., \textbf{Cline, N.}, Hoogkamer, W., \& Huber, M. E. (2022). Unilateral stiffness modulation with a robotic hip exoskeleton elicits adaptation during gait. In 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (pp. 12275–12281). 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS). IEEE. https://doi.org/10.1109/iros47612.2022.9981067 
 
 \sectionheading{Skills \& Interests}
 
 \textbf{Skills:} Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV.
+\textbf{Interests:} Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
 
 \end{document}
