updated to dodge deprecated action

--- a/NickClineResearchResume.tex
+++ b/NickClineResearchResume.tex
@@ -83,7 +83,8 @@ nicholascline1@gmail.com \textbar{} nickcline.com
 \textbf{Robotic Simulation}
 \begin{itemize}
 \item Built a Furuta pendulum model for use in Gazebo, controlled with C++ scripts and ROS 2. Developed swing-up and energy-minimizing controllers to stabilize pendulum. Future implementations include RL control of the pendulum and double pendulum control.
-\item 
+\item Designed and prototyped cycloidal and planetary gearboxes for use with brushless DC motors. Tested prototypes using speed control and iterated on design to improve assembly and strength.
+\item Produced a benchtop dynamometer prototype to test the two similar DC motors, evaluating performance against cost to optimize motor choice for a bipedal robot design. 
 \end{itemize}
 
 \sectionheading{Publications}
