--- a/NickClineResearchResume.tex
+++ b/NickClineResearchResume.tex
@@ -8,12 +8,16 @@
 % Set page margins to 0.23 inches
 \usepackage[margin=0.23in]{geometry}
 
-% Define a command for section headings
+% Reduce overall vertical spacing
+\usepackage{setspace}
+\setstretch{0.9}
+
+% Define a command for section headings with reduced spacing
 \newcommand{\sectionheading}[1]{%
-  \vspace{1em}%
-  {\large\textbf{\MakeUppercase{#1}}}\\[-0.5em]%
-  \rule{\textwidth}{0.5pt}%
   \vspace{0.5em}%
+  {\large\textbf{\MakeUppercase{#1}}}\\[-0.3em]%
+  \rule{\textwidth}{0.5pt}%
+  \vspace{0.3em}%
 }
 
 % Define a command for entries with right-justified dates
@@ -23,7 +27,12 @@
       \textbf{#1}\hfill\textit{#2}%
     }%
   }%
+  \vspace{-0.2em}% Reduce space after each entry
 }
+
+% Reduce space between items in lists
+\usepackage{enumitem}
+\setlist{noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt}
 
 \author{}
 \date{}
@@ -35,7 +44,7 @@
 \huge\textbf{Nick Cline}
 \par}
 
-\vspace{0.5em}  % Add some vertical space
+\vspace{0.3em}  % Add some vertical space
 
 % Center and reduce spacing for contact info
 {\centering
@@ -92,8 +101,8 @@ nicholascline1@gmail.com \textbar{} nickcline.com
 Price, M., Abdikadirova, B., Locurto, D., Jaramillo, J. M., \textbf{Cline, N.}, Hoogkamer, W., \& Huber, M. E. (2022). Unilateral stiffness modulation with a robotic hip exoskeleton elicits adaptation during gait. In 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (pp. 12275–12281). 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS). IEEE. https://doi.org/10.1109/iros47612.2022.9981067 
 
 \sectionheading{Skills \& Interests}
-
 \textbf{Skills:} Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV.
+
 \textbf{Interests:} Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
 
 \end{document}
