changed horizontal line spacing

--- a/NickClineResearchResume.tex
+++ b/NickClineResearchResume.tex
@@ -10,14 +10,15 @@
 
 % Reduce overall vertical spacing
 \usepackage{setspace}
-\setstretch{0.9}
+\setstretch{1.0}
 
 % Define a command for section headings with reduced spacing
 \newcommand{\sectionheading}[1]{%
-  \vspace{0.1em}%
-  {\large\textbf{\MakeUppercase{#1}}}\\[-0.3em]%
-  \rule{\textwidth}{0.5pt}%
-  \vspace{0.3em}%
+  \vspace{0.3em}%                         % Space above the heading text
+  {\large\textbf{\MakeUppercase{#1}}}
+  \\[-0.2em]%                             % Space between text and line
+  \rule{\textwidth}{0.5pt}%               % Horizontal line
+  \\[-0.1em]%                             % Space below the line
 }
 
 % Define a command for entries with right-justified dates
