--- a/NickClineResearchResume.tex
+++ b/NickClineResearchResume.tex
@@ -8,9 +8,9 @@
 % Set page margins to 0.23 inches
 \usepackage[margin=0.23in]{geometry}
 
-% Reduce overall vertical spacing
+% Reduce overall vertical spacing throughout the document
 \usepackage{setspace}
-\setstretch{1.0}
+\setstretch{1.0}  % Sets line spacing to single (1.0). Decrease for less space, increase for more.
 
 % Define a command for section headings with reduced spacing
 \newcommand{\sectionheading}[1]{%
@@ -28,11 +28,11 @@
       \textbf{#1}\hfill\textit{#2}%
     }%
   }%
-}
+}  % No explicit vertical spacing here, but affects space between entries
 
 % Reduce space between items in lists
 \usepackage{enumitem}
-\setlist{noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt}
+\setlist{noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt}  % Removes extra spacing in lists
 
 \author{}
 \date{}
@@ -44,7 +44,7 @@
 \huge\textbf{Nick Cline}
 \par}
 
-\vspace{0.5em}  % Add some vertical space
+\vspace{0.5em}  % Add vertical space between name and contact info
 
 % Center and reduce spacing for contact info
 {\centering
