--- a/NickClineResearchResume.tex
+++ b/NickClineResearchResume.tex
@@ -16,9 +16,9 @@
 \newcommand{\sectionheading}[1]{%
   \vspace{0.6em}%                         % Space above the heading text
   {\large\textbf{\MakeUppercase{#1}}}
-  \\[-0.8em]%                             % Space between text and line
+  %\\[-0.8em]%                             % Space between text and line
   \rule{\textwidth}{0.1pt}%               % Horizontal line
-  \\[-1.0em]%                             % Space below the line
+  %\\[-1.0em]%                             % Space below the line
 }
 
 % Define a command for entries with right-justified dates
