--- a/NickClineResearchResume.tex
+++ b/NickClineResearchResume.tex
@@ -5,19 +5,7 @@
 
 \begin{document}
 
-% Center, bold, and enlarge name
-{\centering
-\huge\textbf{Nick Cline}
-\par}
-
-\vspace{0.5em}
-
-% Center and reduce spacing for contact info
-{\centering
-\small
-Somerville, MA \textbar{} +1 978-880-3507 \textbar{}
-nicholascline1@gmail.com \textbar{} nickcline.com
-\par}
+\NameAndContact
 
 \EducationResearch
 \ResearchExperienceResearch
