fixed some broken lines, added hyperlink support

--- a/NickClineResearchResume.tex
+++ b/NickClineResearchResume.tex
@@ -7,11 +7,11 @@
 
 \NameAndContact
 
-\EducationResearch
+\Education
 \ResearchExperienceResearch
 \WorkExperienceResearch
 \ProjectExperienceResearch
-\PublicationsResearch
-\SkillsInterestsResearch
+\Publications
+\SkillsInterests
 
 \end{document}
