--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -21,8 +21,9 @@
 \newcommand{\Education}{
   \sectionheading{Education}
   \entry{University of Massachusetts Amherst Amherst, MA}{May 2022}
-  \textit{B.S., M.S. in Mechanical Engineering \textbar{} GPA 3.49/4.0}
+  \textit{B.S., M.S. in Mechanical Engineering \textbar{} GPA 3.49/4.0}\\
   \textit{Minor in Computer Science}
+  \vspace{0.5em}  % Add some vertical space after the Education section
 }
 
 % Publications Section (Shared)
@@ -35,7 +36,6 @@
 \newcommand{\SkillsInterests}{
   \sectionheading{Skills \& Interests}
   \textbf{Skills:} Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV.
-
   \textbf{Interests:} Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
 }
 
