ok now it works

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -22,8 +22,7 @@
   \sectionheading{Education}
   \entry{University of Massachusetts Amherst Amherst, MA}{May 2022}
   \textit{B.S., M.S. in Mechanical Engineering \textbar{} GPA 3.49/4.0}\\
-  \textit{Minor in Computer Science}
-  \vspace{0.5em}  % Add some vertical space after the Education section
+  \textit{Minor in Computer Science}\\
 }
 
 % Publications Section (Shared)
