--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -22,7 +22,7 @@
   \sectionheading{Education}
   \entry{University of Massachusetts Amherst Amherst, MA}{May 2022}
   \textit{B.S., M.S. in Mechanical Engineering \textbar{} GPA 3.49/4.0}\\
-  \textit{Minor in Computer Science}\\
+  \textit{Minor in Computer Science}
 }
 
 % Publications Section (Shared)
@@ -34,7 +34,7 @@
 % Skills & Interests Section (Shared)
 \newcommand{\SkillsInterests}{
   \sectionheading{Skills \& Interests}
-  \textbf{Skills:} Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV.
+  \textbf{Skills:} Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV. \\
   \textbf{Interests:} Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
 }
 
@@ -109,7 +109,7 @@
   \textit{Design Engineer}
   \begin{itemize}
   \item Executed product development processes, designing electronics packaging and rapid prototyping for low volume production.
-  \item Generated CNC fabrication processes, reducing costs by 90%.
+  \item Generated CNC fabrication processes, reducing costs by 90\%.
   \end{itemize}
 }
 
