--- a/resume_settings.tex
+++ b/resume_settings.tex
@@ -23,7 +23,7 @@
 
 % Custom commands
 \newcommand{\sectionheading}[1]{%
-  \vspace{1.5em}
+  \par
   {\large\textbf{\MakeUppercase{#1}}}
   \\%[-0.2em]%
   \rule{\textwidth}{0.1pt}%
