--- a/resume_settings.tex
+++ b/resume_settings.tex
@@ -25,9 +25,9 @@
 \newcommand{\sectionheading}[1]{%
   \par
   {\large\textbf{\MakeUppercase{#1}}}
-  \\%[-0.2em]%
+  \\[-0.5em]% %space between title and line
   \rule{\textwidth}{0.1pt}%
-  \\[-0.1em]%
+  \\[-0.1em]% %space between line and text
 }
 
 \newcommand{\entry}[2]{%
