--- a/resume_settings.tex
+++ b/resume_settings.tex
@@ -23,9 +23,9 @@
 
 % Custom commands
 \newcommand{\sectionheading}[1]{%
-  \par
+  \par\noindent
   {\large\textbf{\MakeUppercase{#1}}}
-  \\[-0.5em]% %space between title and line
+  \\[-0.9em]% %space between title and line
   \rule{\textwidth}{0.1pt}%
   \\[-0.1em]% %space between line and text
 }
