--- a/resume_settings.tex
+++ b/resume_settings.tex
@@ -23,11 +23,11 @@
 
 % Custom commands
 \newcommand{\sectionheading}[1]{%
-  \par\noindent
+  \par\noindent\vspace{0.3em}%
   {\large\textbf{\MakeUppercase{#1}}}
-  \\[-0.9em]% %space between title and line
+  \\[-0.6em]% %space between title and line
   \rule{\textwidth}{0.1pt}%
-  \\[-0.1em]% %space between line and text
+  \\[0.3em]% %space between line and text
 }
 
 \newcommand{\entry}[2]{%
