--- a/resume_settings.tex
+++ b/resume_settings.tex
@@ -23,8 +23,8 @@
 
 % Custom commands
 \newcommand{\sectionheading}[1]{%
-  \par\noindent\vspace{0.3em}%
-  {\large\textbf{\MakeUppercase{#1}}}
+  \par\noindent\vspace{\baselineskip}%
+  {\large\textbf{\MakeUppercase{#1}}}%
   \\[-0.6em]% %space between title and line
   \rule{\textwidth}{0.1pt}%
   \\[0.3em]% %space between line and text
