finally I fixed it

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -66,7 +66,7 @@
   \entry{Charge Analytics LLC, Ipswich, MA}{Jun 2021 -- Aug 2021}
   \textit{Design Engineer}
   \begin{itemize}
-  \item Executed end-to-end product development processes, designing electronics packaging and rapid prototyping for low volume production. Generated CNC fabrication processes to reduce procurement and manufacturing costs by 90%.
+  \item Executed end-to-end product development processes, designing electronics packaging and rapid prototyping for low volume production. Generated CNC fabrication processes to reduce procurement and manufacturing costs by 90\%.
   \end{itemize}
 }
 
