Skills and Interests Table

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -34,8 +34,10 @@
 % Skills & Interests Section (Shared)
 \newcommand{\SkillsInterests}{
   \sectionheading{Skills \& Interests}
-  \textbf{Skills:} Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV. \\
-  \textbf{Interests:} Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
+  \noindent\begin{tabular}{@{}p{1.3cm}p{\dimexpr\textwidth-1.3cm-4\tabcolsep\relax}@{}}
+    \textbf{Skills:} & Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV. \\[0.5em]
+    \textbf{Interests:} & Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
+  \end{tabular}
 }
 
 % ===== RESEARCH RESUME SECTIONS =====
