--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -34,7 +34,7 @@
 % Skills & Interests Section (Shared)
 \newcommand{\SkillsInterests}{
   \sectionheading{Skills \& Interests}
-  \noindent\begin{tabular}{@{}p{1.3cm}p{\dimexpr\textwidth-1.3cm-4\tabcolsep\relax}@{}}
+  \noindent\begin{tabular}{@{}l@{\hspace{0.5em}}l@{}}
     \textbf{Skills:} & Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV. \\[0.5em]
     \textbf{Interests:} & Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
   \end{tabular}
