--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -34,15 +34,11 @@
 % Skills & Interests Section (Shared)
 \newcommand{\SkillsInterests}{
   \sectionheading{Skills \& Interests}
-  \noindent\begin{tabular}{@{}m{4em}@{\hspace{0.5em}}m{\dimexpr\textwidth-4.5em}@{}}
-    \centering\textbf{Skills:} & 
-    \centering\begin{minipage}[c]{\linewidth}
-      Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV.
-    \end{minipage} \\[0.5em]
-    \centering\textbf{Interests:} & 
-    \centering\begin{minipage}[c]{\linewidth}
-      Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
-    \end{minipage}
+  \noindent\begin{tabular}{@{}p{4em}@{\hspace{0.5em}}p{\textwidth-5em}@{}}
+    \textbf{Skills:} & 
+    Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV. \\[0.5em]
+    \textbf{Interests:} & 
+    Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
   \end{tabular}
 }
 
