changed heading spacing

--- a/resume_settings.tex
+++ b/resume_settings.tex
@@ -24,10 +24,11 @@
 % Custom commands
 \newcommand{\sectionheading}[1]{%
   \par\noindent
+  \vspace{0.5em}% Add vertical space above the heading
   {\large\textbf{\MakeUppercase{#1}}}%
-  \\[-0.6em]% %space between title and line
+  \\[-0.6em]% Space between title and line
   \rule{\textwidth}{0.1pt}%
-  \\[0.1em]% %space between line and text
+  \\[0.1em]% Space between line and text
 }
 
 \newcommand{\entry}[2]{%
