more table debugging

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -34,7 +34,7 @@
 % Skills & Interests Section (Shared)
 \newcommand{\SkillsInterests}{
   \sectionheading{Skills \& Interests}
-  \noindent\begin{tabular}{@{}>{\raggedright\arraybackslash}p{4em}@{\hspace{0.5em}}>{\raggedright\arraybackslash}p{\dimexpr\textwidth-4.5em-2\tabcolsep\relax}@{}}
+  \noindent\begin{tabular}{@{}p{4em}@{\hspace{0.5em}}p{\dimexpr\textwidth-4.5em-2\tabcolsep\relax}@{}}
     \textbf{Skills:} & 
     Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV. \\[0.5em]
     \textbf{Interests:} & 
