--- a/resume_settings.tex
+++ b/resume_settings.tex
@@ -23,9 +23,8 @@
 
 % Custom commands
 \newcommand{\sectionheading}[1]{%
-  \par\noindent
-  \vspace{0.5em}% Add vertical space above the heading
-  {\large\textbf{\MakeUppercase{#1}}}%
+  \par\vspace{0.5em}% Add vertical space above the heading
+  \noindent{\large\textbf{\MakeUppercase{#1}}}%
   \\[-0.6em]% Space between title and line
   \rule{\textwidth}{0.1pt}%
   \\[0.1em]% Space between line and text
