--- a/resume_settings.tex
+++ b/resume_settings.tex
@@ -5,6 +5,8 @@
 % Packages and settings
 \usepackage[margin=0.23in]{geometry}
 \usepackage{setspace}
+\usepackage{array}
+\usepackage{calc} %check to make sure this doesn't break anything
 \setstretch{1.0}
 \usepackage{enumitem}
 \setlist{noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt}
