--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -1,5 +1,3 @@
-\usepackage{array}
-
 % ===== SHARED SECTIONS =====
 
 % Name and Contact Information (Shared)
@@ -36,10 +34,14 @@
 % Skills & Interests Section (Shared)
 \newcommand{\SkillsInterests}{
   \sectionheading{Skills \& Interests}
-  \noindent\begin{tabular}{@{}m{5.5em}@{\hspace{0.5em}}p{\dimexpr\textwidth-6em-2\tabcolsep\relax}@{}}
-    \centering\textbf{Skills:} & 
+  \noindent\begin{tabular}{@{}p{5.5em}@{\hspace{0.5em}}p{\dimexpr\textwidth-6em-2\tabcolsep\relax}@{}}
+    \begin{minipage}[c][2\baselineskip][c]{5.5em}
+      \centering\textbf{Skills:}
+    \end{minipage} & 
     Atlassian Suite, C, C++, Python, Rust, Julia, MATLAB, Solidworks, ROS 2, Gazebo, Drake, MPC, Nonlinear Dynamics, OpenCV. \\[0.5em]
-    \centering\textbf{Interests:} & 
+    \begin{minipage}[c][2\baselineskip][c]{5.5em}
+      \centering\textbf{Interests:}
+    \end{minipage} & 
     Robotics, Control Theory, Machine Learning, AI, Mechanism Design, 3D Printing, Gardening, Cooking, Weightlifting.
   \end{tabular}
 }
