--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -28,7 +28,9 @@
 % Publications Section (Shared)
 \newcommand{\Publications}{
   \sectionheading{Publications}
-  Price, M., Abdikadirova, B., Locurto, D., Jaramillo, J. M., \textbf{Cline, N.}, Hoogkamer, W., \& Huber, M. E. (2022). Unilateral stiffness modulation with a robotic hip exoskeleton elicits adaptation during gait. In 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (pp. 12275–12281). 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS). IEEE. https://doi.org/10.1109/iros47612.2022.9981067 
+  {\small
+    Price, M., Abdikadirova, B., Locurto, D., Jaramillo, J. M., \textbf{Cline, N.}, Hoogkamer, W., \& Huber, M. E. (2022). Unilateral stiffness modulation with a robotic hip exoskeleton elicits adaptation during gait. In 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (pp. 12275–12281). IEEE. https://doi.org/10.1109/iros47612.2022.9981067 
+  }
 }
 
 % Skills & Interests Section (Shared)
