added website and biped simulation, split projects in projects section

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -83,11 +83,23 @@
 % Project Experience Section - Research Version
 \newcommand{\ProjectExperienceResearch}{
   \sectionheading{Project Experience}
-  \textbf{Robotic Simulation}
+  \entry{Robotic Simulation}{October 2023 -- Present}
   \begin{itemize}
-  \item Built a Furuta pendulum model for use in Gazebo, controlled with C++ scripts and ROS 2. Developed swing-up and energy-minimizing controllers to stabilize pendulum. Future implementations include RL control of the pendulum and double pendulum control.
+  \item Built a Furuta pendulum model for use in Gazebo and Drake, controlled with C++ scripts and ROS 2. Developed swing-up and energy-minimizing controllers to stabilize pendulum. Future implementations include RL control of the pendulum and double pendulum control.
+  \item Created a bipedal robot model in Gazebo and used Julia to output inverse dynamics from the system configuration. Future implementations include full-body control of the bipedal robot.
+  \end{itemize}
+
+  \entry{Robotic System Design}{January 2023 -- Present}
+  \begin{itemize}
   \item Designed and prototyped cycloidal and planetary gearboxes for use with brushless DC motors. Tested prototypes using speed control and iterated on design to improve assembly and strength.
   \item Produced a benchtop dynamometer prototype to test the two similar DC motors, evaluating performance against cost to optimize motor choice for a bipedal robot design. 
+  \end{itemize}
+
+  \entry{Personal Website Tools}{June 2024 -- Present}
+  \begin{itemize}
+  \item Developed modular LaTeX templates to streamline resume generation and standardize formatting across different versions, with live versions hosted on GitHub and viewable on my personal website.
+  \item Created JavaScript widgets to display nonlinear dynamical systems, with interactive features to change initial conditions and parameters.
+  \item Developed a counter in Rust to record the number of times a user has clicked the widget.
   \end{itemize}
 }
 
