--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -15,6 +15,8 @@
   Somerville, MA \textbar{} +1 978-880-3507 \textbar{}
   nicholascline1@gmail.com \textbar{} nickcline.com
   \par}
+  
+  \vspace{-\baselineskip}  % Remove extra space below contact info
 }
 
 % Education Section (Shared)
