removed experience to make space

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -16,7 +16,7 @@
   nicholascline1@gmail.com \textbar{} nickcline.com
   \par}
   
-  \vspace{-\baselineskip}  % Remove extra space below contact info
+  \vspace{-1.1em}  % Remove extra space below contact info
 }
 
 % Education Section (Shared)
@@ -73,12 +73,6 @@
   \begin{itemize}
   \item Developed innovative design features for a sensor assembly by exploring trade spaces and proposing new solutions, coordinating with a cross-functional team to plan reviews, track performance and meet strict requirements.
   \item Designed and tested production prototypes, analyzing test data to identify areas for revision and validate production processes for critical assembly features.
-  \end{itemize}
-  
-  \entry{Charge Analytics LLC, Ipswich, MA}{Jun 2021 -- Aug 2021}
-  \textit{Design Engineer}
-  \begin{itemize}
-  \item Executed end-to-end product development processes, designing electronics packaging and rapid prototyping for low volume production. Generated CNC fabrication processes to reduce procurement and manufacturing costs by 90\%.
   \end{itemize}
 }
 
