--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -88,14 +88,14 @@
   \entry{Robotic System Design}{January 2023 -- Present}
   \begin{itemize}
   \item Designed and prototyped cycloidal and planetary gearboxes for use with brushless DC motors. Tested prototypes using speed control and iterated on design to improve assembly and strength.
-  \item Produced a benchtop dynamometer prototype to test the two similar DC motors, evaluating performance against cost to optimize motor choice for a bipedal robot design. 
+  \item Produced a benchtop dynamometer prototype to compare performance and characteristics of two competing DC motors. 
   \end{itemize}
 
   \entry{Personal Website Tools}{June 2024 -- Present}
   \begin{itemize}
   \item Developed modular LaTeX templates to streamline resume generation and standardize formatting across different versions, with live versions hosted on GitHub and viewable on my personal website.
   \item Created JavaScript widgets to display nonlinear dynamical systems, with interactive features to change initial conditions and parameters.
-  \item Developed a counter in Rust to record the number of times a user has clicked the widget.
+  %\item Developed a counter in Rust to record the number of times a user has clicked the widget.
   \end{itemize}
 }
 
