added a mission statement

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -35,6 +35,18 @@
   }
 }
 
+\newcommand{\missionstatement}{
+  \vspace{-0.5em}  % Reduce space before mission statement
+  \begin{center}
+    \begin{minipage}{0.9\textwidth}
+      \centering
+      \large\itshape\color{gray}
+      Innovative mechanical engineer with a passion for robotics and control systems, seeking to leverage expertise in AI, machine learning, and mechanism design to push the boundaries of human-robot interaction and create impactful solutions in the field of intelligent systems.
+    \end{minipage}
+  \end{center}
+  \vspace{-0.5em}  % Reduce space after mission statement
+}
+
 % Skills & Interests Section (Shared)
 \newcommand{\SkillsInterests}{
   \sectionheading{Skills \& Interests}
