--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -35,7 +35,7 @@
   }
 }
 
-\newcommand{\missionstatement}{
+\newcommand{\MissionStatement}{
   \vspace{-0.5em}  % Reduce space before mission statement
   \begin{center}
     \begin{minipage}{0.9\textwidth}
