added color package

--- a/resume_settings.tex
+++ b/resume_settings.tex
@@ -7,6 +7,7 @@
 \usepackage{setspace}
 \usepackage{array}
 \usepackage{calc} %check to make sure this doesn't break anything
+\usepackage{xcolor}
 \setstretch{1.0}
 \usepackage{enumitem}
 \setlist{noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt}
