changed mission statement

--- a/resume_sections.tex
+++ b/resume_sections.tex
@@ -36,15 +36,15 @@
 }
 
 \newcommand{\MissionStatement}{
-  \vspace{-0.5em}  % Reduce space before mission statement
+  \vspace{0.3em}  % Reduce space before mission statement
   \begin{center}
     \begin{minipage}{0.9\textwidth}
       \centering
       \large\itshape\color{gray}
-      Innovative mechanical engineer with a passion for robotics and control systems, seeking to leverage expertise in AI, machine learning, and mechanism design to push the boundaries of human-robot interaction and create impactful solutions in the field of intelligent systems.
+      Experienced mechanical engineer with expertise in robotics control systems and software development, seeking to apply advanced skills in AI, machine learning, and mechanism design to create innovative solutions in robotics control and intelligent systems.
     \end{minipage}
   \end{center}
-  \vspace{-0.5em}  % Reduce space after mission statement
+  \vspace{-1.5em}  % Reduce space after mission statement
 }
 
 % Skills & Interests Section (Shared)
